# unit_00

./: README.md  index.html  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: blocklist.rs  commands.rs  dns_server.rs  main.rs
src/components/: Dashboard.tsx  Header.tsx
src/pages/: Index.tsx  Settings.tsx
