
[package]
name = "rust-blocker"
version = "0.1.0"
description = "A native DNS-based ad blocker built with Rust"
authors = ["Lovable"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["dialog-all", "fs-all", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
trust-dns-server = "0.22"
trust-dns-proto = "0.22"
trust-dns-client = "0.22"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
once_cell = "1.17"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
